tests/test_proof/bad/output/structs-overlap.catala_en.Proof
[ERROR] [A.x] At least two exceptions overlap for this variable:
  --> tests/test_proof/bad/structs-overlap.catala_en
   | 
13 |   context x content integer
   |           ^
   + Test
Counterexample generation is disabled so none was generated.
